@@ -273,6 +273,9 @@ Release 2.7.3 - UNRELEASED
   OPTIMIZATIONS
 
   BUG FIXES
+    
+    HDFS-9851. NameNode throws NPE when setPermission is called on a path that
+    does not exist. (Brahma Reddy Battula via aajisaka)
 
     HDFS-9724. Degraded performance in WebHDFS listing as it does not reuse
     ObjectMapper. (Akira AJISAKA via wheat9)
